# timelines-direct-approach

./: .gitignore  Dockerfile  Pipfile  Plots.ipynb  README  README.md  app.py  blog_post.py  common.py  extra-plots.py  gpu_efficiency.py  k_performance.py  plots.py  pyproject.toml  requirements.txt  run_standalone.py  timeline.py
data/: MVP_results.pkl  gpu_trends_factors_clean.csv  time_num_transistors_results.pkl
